tests/cases/should_fail/literals/unknown_escape_sequence.hash
// run=fail, stage=parse

k := '\j';
